added was influenced column to entitiy historic
