# src/main/java/com/uma/mestrado/persuasive_profiles/models/POSTHistoricRequest.java
@@ -5,12 +5,14 @@ public class POSTHistoricRequest
 {
 
   private int personId, influencePrincipleId;
+  private boolean wasInfluenced;
 
-  public POSTHistoricRequest(int aPersonId, int aInfluencePrincipleId)
+  public POSTHistoricRequest(int aPersonId, int aInfluencePrincipleId, boolean aWasInfluenced)
   {
     super();
     personId = aPersonId;
     influencePrincipleId = aInfluencePrincipleId;
+    wasInfluenced = aWasInfluenced;
   }
 
   public int getPersonId()
@@ -18,11 +20,13 @@ public class POSTHistoricRequest
     return personId;
   }
 
-
   public int getInfluencePrincipleId()
   {
     return influencePrincipleId;
   }
 
-
+  public boolean getWasInfluenced()
+  {
+    return wasInfluenced;
+  }
 }
