# src/main/resources/swagger/openapi.yml
@@ -50,6 +50,10 @@ paths:
           in: query
           required: true
           type: integer
+        - name: was_influenced
+          in: query
+          required: true
+          type: boolean
       responses:
         '200':
           description: ''
